Adding mapping and transformation support for lastMeetingDate in Contact DTO

--- a/external-service/src/main/resources/mappings/crm1-mapping-reverse.json
+++ b/external-service/src/main/resources/mappings/crm1-mapping-reverse.json
@@ -8,5 +8,6 @@
   "$.city": "/MailingAddress/City",
   "$.state": "/MailingAddress/State",
   "$.postalCode": "/MailingAddress/PostalCode",
-  "$.country": "/MailingAddress/Country"
+  "$.country": "/MailingAddress/Country",
+  "$.lastMeetingDate": "/MeetingDate"
 }
