--- a/external-service/src/main/resources/mappings/crm1-mapping.json
+++ b/external-service/src/main/resources/mappings/crm1-mapping.json
@@ -8,5 +8,6 @@
   "$.MailingAddress.City": "/city",
   "$.MailingAddress.State": "/state",
   "$.MailingAddress.PostalCode": "/postalCode",
-  "$.MailingAddress.Country": "/country"
+  "$.MailingAddress.Country": "/country",
+  "$.MeetingDate": "/lastMeetingDate"
 }
