--- a/internal-service/src/main/resources/mappings/crm1-mapping-reverse.json
+++ b/internal-service/src/main/resources/mappings/crm1-mapping-reverse.json
@@ -8,5 +8,6 @@
   "$.cityName": "/MailingAddress/City",
   "$.stateName": "/MailingAddress/State",
   "$.zipCode": "/MailingAddress/PostalCode",
-  "$.countryName": "/MailingAddress/Country"
+  "$.countryName": "/MailingAddress/Country",
+  "$.lastMeetingDate": "/MeetingDate"
 }
