--- a/internal-service/src/main/resources/mappings/crm1-mapping.json
+++ b/internal-service/src/main/resources/mappings/crm1-mapping.json
@@ -8,5 +8,6 @@
   "$.MailingAddress.City": "/cityName",
   "$.MailingAddress.State": "/stateName",
   "$.MailingAddress.PostalCode": "/zipCode",
-  "$.MailingAddress.Country": "/countryName"
+  "$.MailingAddress.Country": "/countryName",
+  "$.MeetingDate": "/lastMeetingDate"
 }
