--- a/internal-service/src/main/resources/mappings/crm3-mapping-reverse.json
+++ b/internal-service/src/main/resources/mappings/crm3-mapping-reverse.json
@@ -8,5 +8,6 @@
   "$.cityName": "/Mailing_City",
   "$.stateName": "/Mailing_State",
   "$.zipCode": "/Mailing_Zip",
-  "$.countryName": "/Mailing_Country"
+  "$.countryName": "/Mailing_Country",
+  "$.lastMeetingDate": "/MeetingDate"
 }
