--- a/external-service/src/main/resources/mappings/crm2-mapping.json
+++ b/external-service/src/main/resources/mappings/crm2-mapping.json
@@ -8,5 +8,6 @@
   "$.properties/address_city/value/": "/city",
   "$.properties/address_state/value/": "/state",
   "$.properties/address_postalcode/value": "/postalCode",
-  "$.properties/address_country/value": "/country"
+  "$.properties/address_country/value": "/country",
+  "$.properties/MeetingDate/value": "/lastMeetingDate"
 }
