--- a/internal-service/src/main/resources/mappings/crm2-mapping-reverse.json
+++ b/internal-service/src/main/resources/mappings/crm2-mapping-reverse.json
@@ -8,5 +8,6 @@
   "$.cityName": "/properties/address_city/value",
   "$.stateName": "/properties/address_state/value",
   "$.zipCode": "/properties/address_postalcode/value",
-  "$.countryName": "/properties/address_country/value"
+  "$.countryName": "/properties/address_country/value",
+  "$.lastMeetingDate": "/properties/MeetingDate/value"
 }
