--- a/internal-service/src/main/resources/mappings/crm2-mapping.json
+++ b/internal-service/src/main/resources/mappings/crm2-mapping.json
@@ -8,5 +8,6 @@
   "$.properties/address_city/value/": "/cityName",
   "$.properties/address_state/value/": "/stateName",
   "$.properties/address_postal/code/value": "/zipCode",
-  "$.properties/address_country/value": "/countryName"
+  "$.properties/address_country/value": "/countryName",
+  "$.properties/MeetingDate/value": "/lastMeetingDate"
 }
